set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -g")


add_executable(
  EHDG_GN_ANALYTICAL_SOLUTION_SERIAL
  ${PROJECT_SOURCE_DIR}/examples/ehdg_gn_analytical_solution/analytical_main_gn.cpp
  ${SOURCES}
  ${GN_SOURCES}
)

target_include_directories(EHDG_GN_ANALYTICAL_SOLUTION_SERIAL PRIVATE ${YAML_CPP_INCLUDE_DIR})  
target_link_libraries(EHDG_GN_ANALYTICAL_SOLUTION_SERIAL ${YAML_CPP_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

install(TARGETS EHDG_GN_ANALYTICAL_SOLUTION_SERIAL DESTINATION bin)

if(USE_OMPI)
  add_executable(
    EHDG_GN_ANALYTICAL_SOLUTION_OMPI
    ${PROJECT_SOURCE_DIR}/examples/ehdg_gn_analytical_solution/analytical_ompi_main_gn.cpp
    ${SOURCES}
    ${SWE_SOURCES}
    ${PROJECT_SOURCE_DIR}/source/communication/ompi_communicator.cpp
  )

  set_target_properties(EHDG_GN_ANALYTICAL_SOLUTION_OMPI PROPERTIES COMPILE_FLAGS "${OpenMP_CXX_FLAGS} -DHAS_PETSC")

  target_include_directories(EHDG_GN_ANALYTICAL_SOLUTION_OMPI PRIVATE ${YAML_CPP_INCLUDE_DIR} ${MPI_CXX_INCLUDE_PATH} ${PETSC_INCLUDES})  
  target_link_libraries(EHDG_GN_ANALYTICAL_SOLUTION_OMPI ${YAML_CPP_LIBRARIES} ${MPI_CXX_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES} ${OpenMP_CXX_FLAGS} ${PETSC_LIBRARIES})

  install(TARGETS EHDG_GN_ANALYTICAL_SOLUTION_OMPI DESTINATION bin)
endif()
